# Voting-System

./: CMakeLists.txt  README.md
include/: CryptoUtils.h  VotingSystem.h
src/: Client.cpp  CryptoUtils.cpp  Server.cpp  VotingSystem.cpp  main.cpp
